#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
#
# This is part of LFSread.
#
# $Author$
# $Rev$
# $Date::                           $
#
AC_PREREQ([2.69])
AC_INIT([LFSread], [0.0.0], [matsuand AT users DT sourceforge DT jp])
AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE

m4_include([m4/progs.m4])

# Checks for programs.
AC_PROG_PLATEX
AC_PROG_DVIPDFMX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 lfsread.ins])
AC_OUTPUT
